# model/api/addcomment.go
@@ -1,0 +1,5 @@
+package model
+
+type AddCommentResponse struct {
+	Success      bool     `json:"success"`
+}
