# model/api/addsample.go
@@ -1,0 +1,5 @@
+package model
+
+type AddSampleResponse struct {
+	Success      bool     `json:"success"`
+}
