# model/api/patientdata/patientdata.go
@@ -1,15 +1,10 @@
 package model
 
-import (
-	"time"
-)
-
 type PatientData struct {
-	Id          string        `json:"id"`
-	DateCreated time.Time     `json:"date_created"`
+	Id          int64         `json:"id"`
 	Name        string        `json:"name"`
 	Sex         string        `json:"sex"`
 	DOB         string        `json:"date_of_birth"`
-	Samples     []Sample `json:"samples"`
+	Samples     []string      `json:"samples"`
     Comments    []string      `json:"comments"`
 }
